<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.sonicwave.speakercleaner.fragment.DbFragment" />


    </data>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/db_title"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <com.sonicwave.speakercleaner.view.DecimalScaleRulerView
                android:id="@+id/scaleWheelView_weight"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.min}"
                        android:textColor="@color/f4df0f2"
                        android:textSize="30dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/db_min"
                        android:textColor="@color/white"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.avg}"
                        android:textColor="@color/f4df0f2"
                        android:textSize="30dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/db_avg"
                        android:textColor="@color/white"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.max}"
                        android:textColor="@color/f4df0f2"
                        android:textSize="30dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/db_max"
                        android:textColor="@color/white"
                        android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                isGone="@{vm.isStart}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/db_tip"
                android:textColor="@color/f4df0f2"
                android:textSize="16dp" />

            <FrameLayout
                isGone="@{!vm.isCamera}"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="25dp">

                <androidx.camera.view.PreviewView
                    android:id="@+id/previewView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                isGone="@{vm.isStart}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:onClick="@{()->vm.startCamera()}"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/db_btn1"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                isGone="@{vm.isStart}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:onClick="@{()->vm.start()}"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/db_btn"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                isGone="@{!vm.isStart}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:onClick="@{()->vm.stop()}"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/stop"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>
</layout>