<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.sonicwave.speakercleaner.ui.MainActivity" />


    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/nav_view"
            isGone="@{vm.isHide}"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="@color/f04131d"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:onClick="@{() -> vm.goSound()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@{vm.index==0?@drawable/sound_p:@drawable/sound}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_sound"
                    android:textColor="@{vm.index==0?@color/f4df0f2:@color/white}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:onClick="@{() -> vm.goDb()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@{vm.index==1?@drawable/db_p:@drawable/db}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_db"
                    android:textColor="@{vm.index==1?@color/f4df0f2:@color/white}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center_horizontal|bottom"
                android:onClick="@{() -> vm.goTone()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@{vm.index==2?@drawable/tone_p:@drawable/tone}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_tone"
                    android:textColor="@{vm.index==2?@color/f4df0f2:@color/white}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:onClick="@{() -> vm.goStereo()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@{vm.index==3?@drawable/stereo_p:@drawable/stereo}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_stereo"
                    android:textColor="@{vm.index==3?@color/f4df0f2:@color/white}" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:onClick="@{() -> vm.goSetting()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@{vm.index==4?@drawable/setting_p:@drawable/setting}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_setting"
                    android:textColor="@{vm.index==4?@color/f4df0f2:@color/white}" />
            </LinearLayout>

        </LinearLayout>

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/nav_view"
            android:layout_alignParentTop="true"
            app:defaultNavHost="true" />

<!--        <FrameLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="#ee000000">-->
<!--            <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@color/white"-->
<!--                android:src="@drawable/mask_sound"/>-->
<!--        </FrameLayout>-->
    </RelativeLayout>
</layout>