<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.sonicwave.speakercleaner.fragment.SettingFragment" />


    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/setting_title"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/setting_item_bg"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="20dp"
                    android:paddingBottom="15dp"
                    android:onClick="@{()->vm.clickRate()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_tip1"
                        android:drawableLeft="@drawable/setting_pro"
                        android:drawablePadding="10dp"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:src="@drawable/setting_right" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/setting_item_bg"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="20dp"
                    android:paddingBottom="15dp"
                    android:onClick="@{()->vm.clickPrivacy()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_tip2"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/setting_privacy"
                        android:drawablePadding="10dp"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:src="@drawable/setting_right" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/setting_item_bg"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="20dp"
                    android:paddingBottom="15dp"
                    android:onClick="@{()->vm.clickAbout()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_tip3"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/setting_about"
                        android:drawablePadding="10dp"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:src="@drawable/setting_right" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/setting_item_bg"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="20dp"
                    android:paddingBottom="15dp"
                    android:onClick="@{()->vm.clickShare()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_tip4"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/setting_share"
                        android:drawablePadding="10dp"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:src="@drawable/setting_right" />

                </FrameLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>