<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.sonicwave.speakercleaner.fragment.StereoFragment" />


    </data>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/stereo_title"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/stereo_icon" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/stereo_icon" />
            </FrameLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@color/f04131d"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->vm.selectCheckValue()}"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@{vm.check?@drawable/check_p:@drawable/check}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="16dp"
                        android:textColor="@{vm.check?@color/white:@color/f81898e}"
                        android:text="@string/stereo_stereo"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:onClick="@{()->vm.selectCheckValue()}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@{!vm.check?@drawable/check_p:@drawable/check}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="16dp"
                        android:textColor="@{!vm.check?@color/white:@color/f81898e}"
                        android:text="@string/stereo_bass"/>
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:onClick="@{()->vm.start()}"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@{vm.isStart?@string/stop:@string/stereo_btn}"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>
</layout>